--- a/index.html
+++ b/index.html
@@ -4,84 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio | Jose Cortes</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #f3f4f6, #e2e8f0);
-            color: #2d3748;
-            background-color: blue;
-        }
-
-        .navbar {
-            background-color: #1a202c;
-        }
-
-        .navbar-brand, .navbar-nav .nav-link, .btn-outline-light {
-            color: #f7fafc;
-        }
-
-        .navbar-brand {
-            font-weight: bold;
-            font-size: 1.5rem;
-        }
-
-        .hero {
-            text-align: center;
-            padding: 80px 20px 40px;
-        }
-
-        .hero h1 {
-            font-size: 3rem;
-            font-weight: bold;
-            color: #2b6cb0;
-        }
-
-        .about-card {
-            background-color: #ffffff;
-            border-radius: 20px;
-            padding: 40px;
-            margin: 30px auto;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        }
-
-        .about-card h2 {
-            color: #d63384;
-        }
-
-        .card {
-            border: none;
-            border-radius: 15px;
-            overflow: hidden;
-            transition: all 0.3s ease-in-out;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25);
-        }
-
-        .card img {
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .btn-primary {
-            border-radius: 50px;
-            padding: 10px 25px;
-            font-weight: 600;
-        }
-
-        footer {
-            background-color: #1a202c;
-            color: #f7fafc;
-            padding: 30px 0;
-            text-align: center;
-            margin-top: 50px;
-        }
-    </style>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
@@ -102,10 +27,10 @@
     </section>
 
     <div class="container about-card">
-        <h2>Sobre mí</h2>
+        <h2 style="text-align: center;">Sobre mí</h2>
         <p>
             Hello, my name is Jose Miguel Cortes Escobar.
-            Soy ingeniero mecatronico graduado del ITM (Instituto Tecnologico Metropolitano), soy colombiano orgullasamente antioqueño actualmente vivo en la ciudad de medellin en el barrio belen con mi madre y mis dos perros uno llamado ñapa que es un pincher y el otro llamado orion y es un vordercollie.
+            Soy ingeniero mecatronico graduado del ITM (Instituto Tecnologico Metropolitano), soy colombiano orgullasamente antioqueño actualmente vivo en la ciudad de medellin en el barrio belen y estoy estudiando para ser un desarrollador web en Riwi.
         </p>
     </div>
 
@@ -117,7 +42,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Restaurante Caseritos</h5>
                         <p class="card-text">Diseño de menú digital con HTML y CSS.</p>
-                        <a href="#" target="_blank" class="btn btn-primary">Ver Proyecto</a>
+                        <a href="https://josecortes99.github.io/Actividad_1_Semana_2_HTML-CSS-/" target="_blank" class="btn btn-primary">Ver Proyecto</a>
                     </div>
                 </div>
             </div>
@@ -128,7 +53,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Landing Page Groud Taste</h5>
                         <p class="card-text">Diseño de una landing page digital hecha con HTML y CSS.</p>
-                        <a href="#" target="_blank" class="btn btn-primary">Ver Proyecto</a>
+                        <a href="https://josecortes99.github.io/Actividad_2_Semana_2_HTML-CSS-/" target="_blank" class="btn btn-primary">Ver Proyecto</a>
                     </div>
                 </div>
             </div>
@@ -139,7 +64,40 @@
                     <div class="card-body">
                         <h5 class="card-title">Cartas Dragon Ball</h5>
                         <p class="card-text">Maquetación tipo galería de cartas estilo Dragon Ball.</p>
-                        <a href="#" target="_blank" class="btn btn-primary">Ver Proyecto</a>
+                        <a href="https://josecortes99.github.io/Actividad_1-Semana_3/" target="_blank" class="btn btn-primary">Ver Proyecto</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="./Imagenes/porta.png" class="card-img-top" alt="dragon">
+                    <div class="card-body">
+                        <h5 class="card-title">Portafolio</h5>
+                        <p class="card-text">Portafolio Presentacion Personal.</p>
+                        <a href="https://josecortes99.github.io/Entrenamiento_1_Modulo_2/" target="_blank" class="btn btn-primary">Ver Proyecto</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="./Imagenes/entre_2.png" class="card-img-top" alt="dragon">
+                    <div class="card-body">
+                        <h5 class="card-title">Entrenamiento 2</h5>
+                        <p class="card-text">Pagina con diferentes estilos y animaciones.</p>
+                        <a href="https://josecortes99.github.io/Entrenamiento_2_Modulo_2/" target="_blank" class="btn btn-primary">Ver Proyecto</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="./Imagenes/feria.png" class="card-img-top" alt="dragon">
+                    <div class="card-body">
+                        <h5 class="card-title">Feria</h5>
+                        <p class="card-text">Pagina Celebracion Santa Muerte.</p>
+                        <a href="https://juanseexx.github.io/santa-muerte/" target="_blank" class="btn btn-primary">Ver Proyecto</a>
                     </div>
                 </div>
             </div>
@@ -152,6 +110,8 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
