--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="./Imagenes/porta.png" class="card-img-top" alt="dragon">
+                    <img src="./Imagenes/porta.png" class="card-img-top" alt="portafolio">
                     <div class="card-body">
                         <h5 class="card-title">Portafolio</h5>
                         <p class="card-text">Portafolio Presentacion Personal.</p>
@@ -82,7 +82,7 @@
 
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="./Imagenes/entre_2.png" class="card-img-top" alt="dragon">
+                    <img src="./Imagenes/entre_2.png" class="card-img-top" alt="entrenamiento_2">
                     <div class="card-body">
                         <h5 class="card-title">Entrenamiento 2</h5>
                         <p class="card-text">Pagina con diferentes estilos y animaciones.</p>
@@ -93,11 +93,22 @@
 
             <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="./Imagenes/feria.png" class="card-img-top" alt="dragon">
+                    <img src="./Imagenes/feria.png" class="card-img-top" alt="feria">
                     <div class="card-body">
                         <h5 class="card-title">Feria</h5>
                         <p class="card-text">Pagina Celebracion Santa Muerte.</p>
                         <a href="https://juanseexx.github.io/santa-muerte/" target="_blank" class="btn btn-primary">Ver Proyecto</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="./Imagenes/entre_3.png" class="card-img-top" alt="entrenamiento_3">
+                    <div class="card-body">
+                        <h5 class="card-title">Entrenamiento 3</h5>
+                        <p class="card-text">entrenamiento usando flexbox y grid para posicionamiento.</p>
+                        <a href="https://josecortes99.github.io/Entrenamiento_3_Modulo_2/" target="_blank" class="btn btn-primary">Ver Proyecto</a>
                     </div>
                 </div>
             </div>
