--- a/index.html
+++ b/index.html
@@ -4,31 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio | Jose Cortes</title>
+    <link rel="stylesheet" href="./styles.css">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
 </head>
-<body>
+<body class="body">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Portafolio</a>
             <form class="d-flex ms-auto" role="search">
                 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                <button class="btn btn-outline-light" type="submit">Buscar</button>
+                <button style="color: rgb(87, 6, 248);" class="btn btn-outline-light" type="submit">Buscar</button>
             </form>
         </div>
     </nav>
 
     <section class="hero">
         <div class="container">
-            <h1>Portafolio Jose Cortes</h1>
+            <h1 class="container__title">Portafolio Jose Cortes</h1>
             <p class="lead">Explora mis proyectos y habilidades.</p>
         </div>
     </section>
 
     <div class="container about-card">
-        <h2 style="text-align: center;">Sobre mí</h2>
-        <p>
+        <h2 class="title__h2">Sobre mí</h2>
+        <p class="p">
             Hello, my name is Jose Miguel Cortes Escobar.
             Soy ingeniero mecatronico graduado del ITM (Instituto Tecnologico Metropolitano), soy colombiano orgullasamente antioqueño actualmente vivo en la ciudad de medellin en el barrio belen y estoy estudiando para ser un desarrollador web en Riwi.
         </p>
@@ -115,9 +116,10 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
             <p>&copy; 2025 Jose Cortes. Todos los derechos reservados.</p>
+            <p>redes</p>
         </div>
     </footer>
 
